--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="https://i.imgflip.com/3oelwi.png">
     <h1>Odin Recipes</h1>
     <a href="lasagna.html">Enchilada Lasagna</a>
   <div></div>
