--- a/Quiche.html
+++ b/Quiche.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Quick Quiche </h1>
-    <img src="https://images.media-allrecipes.com/userphotos/9289719.jpg" alt="Quiche">
+    <img class="food" src="https://images.media-allrecipes.com/userphotos/9289719.jpg" alt="Quiche">
     <h2>Description</h2>
     <p><em>When you don't have the time to make a pastry crust, try this quick lunch idea.
  You may add any other goodies you like, such as ham, chicken, crab, shrimp or broccoli.</em></p>
