--- a/lasagna.html
+++ b/lasagna.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Enchilada Lasagna</h1>
-    <img src="https://images.media-allrecipes.com/userphotos/4482027.jpg" alt="Mexican lasagna">
+    <img class="food" src="https://images.media-allrecipes.com/userphotos/4482027.jpg" alt="Mexican lasagna">
     <h2>Description</h2>
     <p><em>This enchilada lasagna is perfect for dinner or potlucks.</em></p>
 
