--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link
+  <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <img src="https://i.imgflip.com/3oelwi.png">
+    <img class="shef" src="https://i.imgflip.com/3oelwi.png">
     <h1>Odin Recipes</h1>
     <a href="lasagna.html">Enchilada Lasagna</a>
   <div></div>
