--- a/rice.html
+++ b/rice.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Ginger Rice</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9370057.jpg&w=595&h=398&c=sc&poi=face&q=60" alt="Photo of ginger rice in a bowl">
+    <img class="food" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9370057.jpg&w=595&h=398&c=sc&poi=face&q=60" alt="Photo of ginger rice in a bowl">
     <h2>Description</h2>
     <p><em>Delicious, fragrant ginger rice. Perfect with any fish entree.</em></p>
 
